--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "npm run build:ts && npm run build:pckg",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "build:pckg": "cp package.json dist/",
     "build:ts": "./node_modules/.bin/tsc",
     "start": "npm run build:ts && node ./dist/express.server.js",
@@ -16,7 +17,6 @@
     "lint": "./node_modules/.bin/tslint ./src/*"
   },
   "dependencies": {
-    "@types/cors": "^2.8.4",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -28,10 +28,14 @@
     "pug": "^2.0.0-beta11",
     "read-chunk": "^2.0.0",
     "serve-favicon": "~2.3.2",
+    "ts-node": "^7.0.1",
     "winston": "^2.3.1",
     "ws": "^2.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/cors": "^2.8.4",
+    "@types/mocha": "^5.2.5",
     "@types/body-parser": "^1.16.0",
     "@types/cookie-parser": "^1.3.30",
     "@types/errorhandler": "0.0.30",
@@ -40,6 +44,8 @@
     "@types/serve-favicon": "^2.2.28",
     "@types/winston": "^2.2.0",
     "@types/ws": "0.0.39",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "pre-commit": "^1.2.2",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1"
